--- a/app/views/restaurant/index.html.erb
+++ b/app/views/restaurant/index.html.erb
@@ -1,6 +1,14 @@
-<h1>Restaurants</h1>
-<% @restaurants.each do |restaurant| %>
-<p><%= link_to restaurant.name, restaurant_path(restaurant.id) %></p>
-<% end %>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=EB+Garamond&family=Great+Vibes&display=swap" rel="stylesheet">
 
-<%= link_to 'Add a new restaurant!', new_restaurant_path%>
+
+<div class="index">
+<h1>Restaurants</h1>
+
+<% @restaurants.each do |restaurant| %>
+<p id="link"><%= link_to restaurant.name, restaurant_path(restaurant) %></p>
+<% end %>
+<p>
+<div id="add"><%= link_to 'Add a new restaurant!', new_restaurant_path%></div>
+</div>
