--- a/app/views/restaurant/new.html.erb
+++ b/app/views/restaurant/new.html.erb
@@ -1,19 +1,21 @@
-<h1>Submit a new restaurant</h1>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Bubblegum+Sans&family=Great+Vibes&family=Passion+One&family=Poiret+One&display=swap" rel="stylesheet">
 
-<%= form_with model:@restaurant do |form|%>
-    <%= form.label :name %>
-    <%= form.text_field :name %>
 
-    <br>
-    <%= form.label :cuisine %>
-    <%= form.text_field :cuisine %>
+<h2>Submit a new restaurant:</h2>
 
-    <br>
-    <%= form.label :price_range %>
-    <%= form.text_field :price_range %>
-
-    <br>
+<div class="form"><%= form_with model:@restaurant do |form|%>
+    <div class="label"><%= form.label :name %></div>
+    <div class="text_field"> <%= form.text_field :name %></div>
+    <div class="label"><%= form.label :cuisine %></div>
+    <div class="text_field"> <%= form.text_field :cuisine %></div>
+    <div class="label"><%= form.label :price_range %></div>
+    <div class="text_field"><%= form.text_field :price_range %></div>
+    <div class="label"><%= form.label :description %></div>
+    <div class="text_field"><%= form.text_field :description, id: 'description_field' %></div>
+    <p>
     <%= form.submit 'Add Restaurant' %>
-<% end %>
-
+<% end %></div>
+<p>
 <%= link_to 'Back to Home' , '/' %>
